2004-10-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/*.cc: use robust_scm2moment() where appropriate.

	* lily/moment.cc (robust_scm2moment): new function.

	* scm/titling.scm (default-score-title): remove caps for piece.

	* lily/include/slur-scoring.hh (struct Slur_score_state): new file

	* lily/include/slur-configuration.hh (class Slur_configuration):
	new file.

	* lily/slur-configuration.cc: new file. move scoring functions
	into Slur_configuration.

	* lily/slur-scoring.cc (Slur_score_state): change static functions
	to methods of Slur_score_state.

	* lily/bezier-bow.cc (Message): 

	* flower/include/interval-set.hh (Message): new file.

	* flower/interval-set.cc (Message): new file.

2004-10-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/multi-measure-rest-engraver.cc (process_music): always
	generate MultiMeasureRestNumbers.

	* SConstruct (txt_files): switch of make dist

	* lily/bezier-bow.cc (get_slur_indent_height): change recipe to
	make sure that (indent < len / 3). This fixes progerror-max_h.ly

	* lily/multi-measure-rest-engraver.cc (process_music): make
	MultiMeasureRestNumber too.

2004-10-08  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Bar lines): Added a note that
	defaultBarType is to be changed in the Timing context.

2004-10-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/guile-compatibility.hh: add file.

	* scm/framework-tex.scm (convert-to-dvi): use max of current
	extra_mem_top and 1M.

	* lily/kpath.cc (LY_DEFINE): ly_kpathsea_expand_variable. New
	function.

2004-10-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-tex.scm (convert-to-dvi): set extra_mem_top to 1M.
 
2004-10-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (struct Slur_score_state): add
	has_same_beam_, edge_has_beams_, is_broken_ bools.
	(get_base_attachments): simpler Y attachment determination for
	broken slurs.

2004-10-04  Jan Nieuwenhuizen  <janneke@gnu.org>
