@@ -38,7 +38,6 @@ find_scaled_font (Output_def *mod,
       mod->set_variable (ly_symbol2scm ("scaled-fonts"), font_table);
     }
 
-  
   SCM sizes = scm_hashq_ref (font_table, f->self_scm (), SCM_BOOL_F);
   if (sizes != SCM_BOOL_F)
     {
