@@ -123,8 +123,13 @@
 		     "{" (sanitize-tex-string str) "}%\n")))
 
 (define (header bookpaper page-count classic?)
-  (let ((scale (ly:output-def-lookup bookpaper 'outputscale)))
-
+  (let ((scale (ly:output-def-lookup bookpaper 'outputscale))
+	(texpaper (string-append
+		   (ly:output-def-lookup bookpaper 'papersizename)
+		   "paper"))
+	(landscape? (eq? #t (ly:output-def-lookup bookpaper 'landscape)))
+	)
+    
     (string-append
      "% Generated by LilyPond "
      (lilypond-version) "\n"
@@ -140,7 +145,10 @@
      (tex-string-def
       "lilypondpaper" 'linewidth
       (ly:number->string (* scale (ly:output-def-lookup bookpaper 'linewidth))))
-
+     "\\def\\lilyponddocumentclassoptions{"
+     texpaper
+     (if  landscape? ",landscape" "")
+      "}%\n"
      (tex-string-def
       "lilypondpaper" 'interscoreline
       (ly:number->string
@@ -274,7 +282,12 @@
 
 (define-public (convert-to-ps book name)
   (let*
-      ((cmd (string-append "dvips -u+ec-mftrace.map -u+lilypond.map -Ppdf "
+      ((bookpaper  (ly:paper-book-book-paper book))
+       (papersize (ly:output-def-lookup bookpaper 'papersizename))
+       (landscape? (eq? #t (ly:output-def-lookup bookpaper 'landscape)))
+       (cmd (string-append "dvips -t " papersize
+			   (if landscape? " -t landscape " " ") 
+			   "  -u+ec-mftrace.map -u+lilypond.map -Ppdf "
 			   (basename name ".tex"))))
 
     (display (format #f (_ "Invoking ~S") cmd) (current-error-port))
