@@ -143,7 +143,7 @@
        \def\lilypondfontencoding####1{
          \fontencoding{####1}
          \selectfont}
-       \documentclass[a4paper]{article}
+       \documentclass[\lilyponddocumentclassoptions]{article}
        %% safe-mode
        \nofiles
        \usepackage[\lilypondpaperinputencoding]{inputenc}
