@@ -1,3 +1,9 @@
+2004-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/framework-tex.scm (convert-to-ps): invoke dvips with -t
+	landscape.
+	(header): add landscape and papersize options.
+
 2004-10-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/*.cc: use robust_scm2moment() where appropriate.
